Use string utils for blank checks